--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 ENV = 'development'
+VITE_PORT = 3000
+baseUrl = '/admin'
+publicPath = '/admin/'
 
-VITE_BASE_URL = '/dev-api'
+VITE_BASE_URL = 'http://192.168.110.79:8007'
