--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 ENV = 'development'
 VITE_PORT = 3000
-baseUrl = '/admin'
-publicPath = '/admin/'
+baseUrl = '/admintest/'
+publicPath = '/admintest/'
+assetsPath = '/admintest/'
 
 VITE_BASE_URL = 'http://192.168.110.79:8007'
