--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
-ENV = 'production'
-VITE_PORT = 3002
-baseUrl = '/admin'
-publicPath = '/admin/'
+ENV = 'development'
+VITE_PORT = 8000
+BASE_URL = '/admintest/'
+publicPath = '/admintest/'
+assetsPath = 'admintest/assets'
 
-VITE_BASE_URL = '/pro-api'
+VITE_BASE_URL = 'http://192.168.110.79:8007'
