--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 ENV = 'development'
 VITE_PORT = 8080
-baseUrl = '/admintest/'
-publicPath = '/admintest/'
-assetsPath = '/admintest/'
+baseUrl = '/admin/'
+publicPath = '/admin/'
+assetsPath = '/admin/'
 
 VITE_BASE_URL = 'http://113.125.84.255:10000'
-VITE_PAGE_URL = '/admintest/'
+VITE_PAGE_URL = '/admin/'
