--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 ENV = 'production'
 VITE_PORT = 8000
-BASE_URL = '/admintest/'
-publicPath = '/admintest/'
-assetsPath = 'admintest/assets'
+BASE_URL = '/admin/'
+publicPath = '/admin/'
+assetsPath = 'admin/assets'
 
 VITE_BASE_URL = 'http://113.125.84.255:10000'
